2010-01-11  Rik  <octave@nomad.inbox5.com>

	* ROADMAP: Update guide to Octave directory structure.

2010-01-11  Rik  <octave@nomad.inbox5.com>

	* README.mirrors: Update ftp links.

2010-01-06  Rik  <octave@nomad.inbox5.com>

	* README: Update links and disk space requirements.

2011-01-06  Jordi Gutiérrez Hermoso  <jordigh@gmail.com>

	* run-octave.in: Add a -gud option so that gdb can be called from
	Emacs's GUD mode and similar.

2011-01-06  John W. Eaton  <jwe@octave.org>

	* mkoctfile.in, mkoctfile.cc.in: Substitute and use LAPACK_LIBS.
	Bug #32009.

2010-01-04  Rik  <octave@nomad.inbox5.com>

	* README.MacOS: Update CFLAGS recommendation to use -O2.

2010-01-04  Rik  <octave@nomad.inbox5.com>

	* README.gnuplot: Update recommendation to version 4.4.

2010-01-04  Marco Atzeri  <marco_atzeri@yahoo.it>

	* README.Cygmin: Update build instructions before 3.4 release.

2010-12-31  Kai Habel  <kai.habel@gmx.de>

	* NEWS: Add curl and divergence to new functions list.

2010-12-20  Ben Abbott  <bpabbott@mac.com>

	* README.MacOS, Makefile.am: Update build insructions for MacOS and
	distribute file in tarball.

2010-12-20  Rik  <octave@nomad.inbox5.com>

	* README.Cray, SENDING-PATCHES, Makefile.am: Remove obsolete files.

2010-12-18  Rik  <octave@nomad.inbox5.com>

	* NEWS: Deprecate sphcat and spvcat functions.

2010-12-17  Rik  <octave@nomad.inbox5.com>

	* README.MacOS: New file documenting build instructions for Mac OSX.

2010-12-09  Kai Habel  <kai.habel@gmx.de>

	* NEWS: Add pie3 to new functions list.

2010-12-09  Marco Atzeri  <marcox_atzeri@yahoo.it>

	* configure.ac: Don't add -lwsock32 to LIBS on cygwin systems.

2010-11-21  Kai Habel  <kai.habel@gmx.de>

	* NEWS: Add uigetdir, uigetfile, uiputfile.

2010-11-19  John W. Eaton  <jwe@octave.org>

	* Makefile.am (bin_SCRIPTS): Remove run-octave from the list.

2010-10-19  John W. Eaton  <jwe@octave.org>

	* configure.ac (AC_INIT): Version is now 3.3.54+.

2010-10-19  John W. Eaton  <jwe@octave.org>
